fixes font, alignment

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,7 +3,7 @@ div {
 }
 
 body {
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 
 .add-book-div {
@@ -23,14 +23,12 @@ body {
 
 .book {
   display: inline-block;
-  width: 25%;
-  height: 40vh;
+  width: 20%;
+  height: 35vh;
   position: relative;
-  margin: 2%;
   text-align: center;
   cursor: pointer;
   box-shadow: 5px 5px 20px #333;
-  margin: 10px;
 }
 
 .book img {
@@ -38,15 +36,8 @@ body {
   width: 100%;
 }
 
-.book-info {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .container {
-  width: 85%;
+  width: 90%;
   margin: 0 auto;
   background-color: white;
   text-align: center;
@@ -131,6 +122,7 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
   height: 40vh;
+  font-family: 'Abril Fatface', cursive;
 }
 
 .welcome {
